[package]
name = "test_os"
version = "0.1.0"
edition = "2018"
authors = ["Mackan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
fatfs = { git = "https://github.com/rafalh/rust-fatfs", version = "0.4.0", default-features = false }
volatile = "0.2.6"
spin = "0.12.0"
x86_64 = "0.15.4"
uart_16550 = "0.3"
pic8259 = "0.11.0"
pc-keyboard = "0.9.0"
linked_list_allocator = "0.9.0"
oorandom = "11.1.3"
heapless = "0.8.0"
embedded-storage = "0.3.1"
byteorder = { version = "1.5.0", default-features = false }
virtio-drivers = { version = "0.7.5", default-features = false, features = ["alloc"] }

smoltcp = { version = "0.11", default-features = false, features = [
	"proto-ipv4",
	"proto-dhcpv4",
	"socket-tcp",
	"socket-udp",
	"socket-dns",
	"socket-dhcpv4",
	"socket-icmp",
	"alloc",
] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc", "async-await"]

[package.metadata.bootimage]
test-args = [
	"-m", "2048",
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
	"-display", "none",
	"-drive", "id=disk,file=data.img,format=qcow2,if=none",
	"-device", "ahci,id=ahci",
	"-device", "ide-hd,drive=disk,bus=ahci.0"
]
run-args = [
	"-s",
	"-machine", "q35",
	"-m", "1024",
	"-serial", "stdio",
	"-display", "cocoa,zoom-to-fit=on",
	"-monitor", "telnet:127.0.0.1:1234,server,nowait",
	"-drive", "id=drive0,file=data.img,format=qcow2,if=none",
	"-device", "virtio-blk-pci,drive=drive0,event_idx=off,ioeventfd=off,vectors=0",
]
test-success-exit-code = 33         # (0x10 << 1) | 1


[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
